<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="title_activity_drving_behavior">DrvingBehaviorActivity</string>
    <string name="title_activity_integral">IntegralActivity</string>
    <string name="title_activity_integral_help">IntegralHelpActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_my_treasure">MyTreasureActivity</string>
    <string name="title_activity_choosedate">ChooseDateBirthActivity</string>
    <string name="title_activity_return_fee_that">ReturnFeeThatActivity</string>
    <string name="title_activity_telephone_explain">TelephoneExplainActivity</string>
    <string name="title_activity_withdraw_deposit">WithdrawDepositActivity</string>
    <string name="title_activity_return_the_money_datails">ReturnTheMoneyDatailsActivity</string>
    <string name="title_activity_telephone_charge_detils">TelephoneChargeDetilsActivity</string>
    <string name="title_activity_push_details">PushDetailsActivity</string>
    <string name="title_activity_circle_information_detail">CircleInformationDetailActivity</string>
    <string name="title_activity_information_second_list">InformationSecondListActivity</string>
    <string name="umeng_example_home_btn_analytics">Analytics</string>
    <string name="umeng_example_home_btn_xp">XP</string>
    <string name="umeng_example_home_btn_ad">Ads</string>
    <string name="umeng_example_home_btn_tools">Tools</string>
    <string name="umeng_example_home_btn_fb">Feedback</string>
    <string name="umeng_example_home_btn_update">Update</string>
    <string name="umeng_example_home_btn_plus">Socialize</string>
    <string name="umeng_example_home_btn_xp_ufp">Umeng For Publisher</string>
    <string name="umeng_example_xp_home_btn_container">Container</string>
    <string name="umeng_example_xp_home_btn_banner">Banner</string>
    <string name="umeng_example_xp_home_btn_banner_ufp">"Banner\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_handler">Handler</string>
    <string name="umeng_example_xp_home_btn_handler_ufp">"Handler\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_tab">Multi-Pages</string>
    <string name="umeng_example_xp_home_btn_wap">WebView</string>
    <string name="umeng_example_xp_home_btn_custom">Custom</string>
    <string name="umeng_example_xp_home_btn_wap_ufp">"WebView\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_push_header">Push AD\n(UFP)</string>
    <string name="umeng_example_xp_home_btn_textlink">Text Link</string>
    <string name="umeng_example_xp_home_btn_container_header">LargeImage</string>
    <string name="umeng_example_xp_home_handler_icons">Icons \n(UFP)</string>
    <string name="umeng_example_fb_home_btn_simple">Simple Demo</string>
    <string name="actionbar_activity_not_found">Failed to open intent&#8230;</string>
    <string name="umeng_example_home_hint_wait">Coming soooooon</string>
    <string name="intro"> The webview before show js call Umeng Analytics APIs</string>
    <string name="app_name">车生活</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="message_center">消息中心</string>
    <string name="xlistview_header_hint_normal">下拉刷新\u2026</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载\u2026</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="item_del">删除</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="back">返回</string>
    <string name="car_shop">精品商城</string>
    <string name="save">保存</string>
    <string name="finish">完成</string>
    <string name="choose">选择</string>
    <string name="detail">详情</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="remind">提示</string>
    <string name="relogin">重新登录</string>
    <string name="already_know">知道了</string>
    <string name="exit_system">再按一次退出程序</string>
    <string name="no_device">当前未绑定设备</string>
    <string name="back_save_remind">此操作会使未保存的信息丢失，您确定要返回吗？</string>
    <string name="check_remind">此操作会使未保存的信息丢失，您确定要返回吗？</string>
    <string name="home_no_device">请先绑定设备</string>
    <string name="home_goto_bind">前往绑定</string>
    <string name="notLogined">您还未登录</string>
    <string name="noCar">您还未绑定车辆</string>
    <string name="car_dynamic">车辆动态</string>
    <string name="str_forward">前进</string>
    <string name="mycar_now_location">当前位置:</string>
    <string name="mycar_find_car_port">找车位</string>
    <string name="location_failed">车辆定位失败，请检查OBD设备</string>
    <string name="special_location_chongqing">重庆</string>
    <string name="special_location_beijing">北京</string>
    <string name="special_location_tianjin">天津</string>
    <string name="special_location_shanghai">上海</string>
    <string name="special_location_hongkong">香港</string>
    <string name="special_location_aomen">澳门</string>
    <string name="mycar_mile">里程</string>
    <string name="mycar_check_violation">查违章</string>
    <string name="mycar_navigation">导航</string>
    <string name="mycar_drive_time">行驶时间</string>
    <string name="mycar_avg_oil">平均油耗</string>
    <string name="mycar_speed">速度</string>
    <string name="mycar_upload">最后上传</string>
    <string name="mycar_input_destination">请输入你要导航的目的地</string>
    <string name="mycar_to_there">到这去</string>
    <string name="mycar_my_footprint">足迹</string>
    <string name="mycar_report">用车报告</string>
    <string name="mycar_more">更多</string>
    <string name="mycar_car_consult">车资讯</string>
    <string name="mycar_find_gasstation">找加油站</string>
    <string name="wash_no">我还没到洗车店</string>
    <string name="wash_else">其他原因</string>
    <string name="wash_cause">请输入您还没洗车的原因</string>
    <string name="wash_submit">提交</string>
    <string name="order_itme_countersign">你是否已经洗车</string>
    <string name="order_itme_title_countersign">确认订单</string>
    <string name="order_itme_yes">是,我已经洗车</string>
    <string name="order_itme_no">否,还没有洗</string>
    <string name="car_idea">养车订单</string>
    <string name="car_shopping">商城订单</string>
    <string name="idea">0/100</string>
    <string name="idea_refer">立即提交</string>
    <string name="set_out">退出登录</string>
    <string name="set_alarm">报警设置</string>
    <string name="set_sound">声音提醒</string>
    <string name="set_shake">震动提醒</string>
    <string name="set_push">接收推送消息</string>
    <string name="set_reputation">5星好评</string>
    <string name="set_version">当前版本</string>
    <string name="set_about_my">关于我们</string>
    <string name="set_clear_cache">清除缓存</string>
    <string name="webName">网址:</string>
    <string name="web">www.chcws.com</string>
    <string name="weChat">微信公众账号:长虹车卫士</string>
    <string name="service_phone">客服电话:400-800-8820</string>
    <string name="service_one">客服电话:</string>
    <string name="phone_servies">400-800-8820</string>
    <string name="Mon">周一</string>
    <string name="Tue">周二</string>
    <string name="Wed">周三</string>
    <string name="Thu">周四</string>
    <string name="Fri">周五</string>
    <string name="Sat">周六</string>
    <string name="Sun">周日</string>
    <string name="signin_title">签到详情</string>
    <string name="signin_previous_page">上一页</string>
    <string name="signin_next_page">下一页</string>
    <string name="signin_sign_today">今日签到</string>
    <string name="signin_tip">提示：每日签到可以获取积分哦~~</string>
    <string name="check_update_old">已经是最新版本 </string>
    <string name="check_update_new">点击更新</string>
    <string name="set">设置</string>
    <string name="set_edition">V1.231</string>
    <string name="logout">退出登录</string>
    <string name="logout_dialog">您确定要退出？</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="Submit">提交</string>
    <string name="prompt">提示</string>
    <string name="whatIsDeviceIDQuestion">什么是设备ID？</string>
    <string name="whatIsDeviceIDAnswer">设备是app配套的硬件产品。绑定硬件产品后您即可通过本app实时掌控您爱车的动态，点击此处了解更多。</string>
    <string name="whyInputMyVinRequestion">为什么要输入我的车架号？</string>
    <string name="whyInputMyVinAnswer">当您为您的账号绑定了车架号之后，您即可享受后续我们为您提供的在线查询违章记录，代缴罚款等业务。</string>
    <string name="whyInputLastKeepRequestion">为什么要输入上次保养行驶里程？</string>
    <string name="whyInputLastKeepAnswer">当您输入了您上次保养后行驶里程后，我们即可根据您的车辆数据为您提供实时保养提醒服务。</string>
    <string name="answerCall">我的疑问没有得到解决?请联系400-793-0888</string>
    <string name="report_sunday">日</string>
    <string name="report_monday">一</string>
    <string name="report_tuesday">二</string>
    <string name="report_wednesday">三</string>
    <string name="report_thursday">四</string>
    <string name="report_friday">五</string>
    <string name="report_saturday">六</string>
    <string name="gain_integral">如何获得积分？</string>
    <string name="gain_integral_manner">获取积分有两种方式：</string>
    <string name="gain_integral_manner_one">&#160;&#160;&#160;&#160;&#160;&#160;&#160;1、安装设备的车辆每行驶一公里，对应的绑定账户可获得1积分。</string>
    <string name="gain_integral_manner_two">&#160;&#160;&#160;&#160;&#160;&#160;&#160;2、每日签到可获取积分。首次签到获取10积分；连续签到从第二天起，每天可多获取10积分，超过第七天后每次获取70积分。中途中断连续签到则重新计算。</string>
    <string name="integral_use">积分有什么用途？</string>
    <string name="integral_use_help">&#160;&#160;&#160;&#160;&#160;&#160;&#160;车生活后续会推出积分商城，届时您账户上的每一个积分都可以用于兑换商城中的商品。</string>
    <string name="phonecharge_use">话费有什么用途？</string>
    <string name="internet_phone">话费用于车生活app中“网络电话”功能的计费。</string>
    <string name="phonecharge_calculate">话费的计费方式</string>
    <string name="phonecharge_calculate_help">从接通计算，每分钟扣除0.1元；未满1分钟的按1分钟计算。不欠费，不找零，不可提现。</string>
    <string name="team_front">团队前身</string>
    <string name="frot_content">华为集团、平安集团、迈普集团等企业核心研发、市场核心人员</string>
    <string name="company_name">车卫士科技</string>
    <string name="company_team">主创人员7人，核心团队成员12人， 12年 IC 硬件及软件、智能硬件、移动 APP、后台数据库应用开发经验</string>
    <string name="future_direction">团队未来产品方向</string>
    <string name="direction_content">车联网接入技术，无线远距离物联网接入技术，蓝牙物联网技术，增强现实智能标签技术</string>
    <string name="team_idea">团队理念</string>
    <string name="idea_content">改变习惯，改变世界，今天，你的车联网了吗~？</string>
    <string name="cheweishi">车卫士</string>
    <string name="app_function">车卫士以丰富客户“车生活”为基础，不断追求产品更加贴近车主生活；我们的目标就是要为客户打造一款简单、易用、实用并且独一无二的车联网产品。为移动物联网与移动互联网结合提供可靠的链接技术和物理网络平台，形成一张无限拓展，无限想象的一张车卫士物联网增强实现平台。</string>
    <string name="yijuhua">今天，你的车联网了吗~？</string>
</resources>