<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding">

        <TextView
            android:id="@+id/left_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/left"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/title_text_gray"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:textColor="@color/text_black_colcor"
            android:textSize="@dimen/title__text_size" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="14sp"
            android:textColor="@color/title_text_gray" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_backgroud">

        <LinearLayout
            android:id="@+id/ll_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/report_sunday"
                android:textColor="@color/gray_normal_6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/report_monday"
                android:textColor="@color/gray_normal_6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/report_tuesday"
                android:textColor="@color/gray_normal_6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/report_wednesday"
                android:textColor="@color/gray_normal_6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/report_thursday"
                android:textColor="@color/gray_normal_6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/report_friday"
                android:textColor="@color/gray_normal_6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/report_saturday"
                android:textColor="@color/gray_normal_6" />
        </LinearLayout>

        <ViewFlipper
            android:id="@+id/flipper1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_week"
            android:paddingBottom="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></RelativeLayout>

</LinearLayout>