<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_backgroud"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbarThumbVertical="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/normal_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/orange_point"
                    android:layout_height="@dimen/orange_point"
                    android:background="@drawable/circle_orange" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/normal_marging"
                    android:text="@string/whatIsDeviceIDQuestion"
                    android:textSize="@dimen/title__text_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_addCarExtraDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:text="@string/whatIsDeviceIDAnswer"
                android:textColor="@color/gray_normal"
                android:textSize="@dimen/titile_side_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/orange_point"
                    android:layout_height="@dimen/orange_point"
                    android:background="@drawable/circle_orange" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/normal_marging"
                    android:text="@string/whyInputMyVinRequestion"
                    android:textSize="@dimen/title__text_size" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:text="@string/whyInputMyVinAnswer"
                android:textColor="@color/gray_normal"
                android:textSize="@dimen/titile_side_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/orange_point"
                    android:layout_height="@dimen/orange_point"
                    android:background="@drawable/circle_orange" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/normal_marging"
                    android:text="@string/whyInputLastKeepRequestion"
                    android:textSize="@dimen/title__text_size" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:text="@string/whyInputLastKeepAnswer"
                android:textColor="@color/gray_normal"
                android:textSize="@dimen/titile_side_text_size" />

            <TextView
                android:id="@+id/tv_extra_communicate"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="@dimen/double_large_marging"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/answerCall"
                android:textColor="@color/gray_normal"
                android:textSize="@dimen/titile_side_text_size" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>